
	* ipmi-fru: Remove legacy option --skip-checks(use -W skipchecks
	since 1.2.1)

	* ipmi-sensors: Remove "ipmi-sensors-sensor-config-file" config
	file support (use "ipmi-sensors-sensor-state-config-file" since
	1.0.0). Remove "ipmi-sensors-groups" and
	"ipmi-sensors-exclude-groups" config file options (use
	"ipmi-sensors-sensor-types" and
	"ipmi-sensor-exclude-sensor-types" since 0.8.1).

2022-02-17 Albert Chu <chu11@llnl.gov>

	* man/ipmiconsole.8.pre.in, man/libipmiconsole.3.pre.in,
	libipmiconsole.conf.5.pre.in: Fix typo in copyright header.

	* Globally update a number of URLs in documentation / comments.

2022-02-17 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-sections.c
	(ipmi_config_core_sections_create): Support IPV6 config in
	Lan6_Conf section.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Correct checkout of IPv6 dynamic addresses.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Do
	not output all IPv6 addresses by default, only output them all in
	verbose mode.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c
	(ipv6_static_router_mac_address_checkout): Fix output corner case
	due to error handling bug.

	* libfreeipmi/cmds/ipmi-lan-cmds.c
	(fill_cmd_set_lan_configuration_parameters_ipv6_static_addresses):
	Fix invalid template check error.

2022-02-14 Albert Chu <chu11@llnl.gov>

	* man/ipmi-config.8.pre.in: Document additional board that
	requires the `veryslowcommit` workaround.

2022-01-25 Albert Chu <chu11@llnl.gov>

	* man/ipmidetect.8.pre.in, man/ipmidetectd.8.pre.in: Correct out
	of date command line options.

2022-01-25 Albert Chu <chu11@llnl.gov>

	* Remove legacy support for the /etc/freeipmi.conf,
	/etc/ipmidetect.conf, /etc/ipmidetectd.conf, and
	/etc/ipmi_monitoring_sensors.conf config files.

	* ipmi-oem: Remove legacy retrieval key 'product-name' from
	'get-system-info' command.  Users should use
	'platform-model-name'.

2022-01-19 Albert Chu <chu11@llnl.gov>
