@@ -3775,308 +3775,6 @@ config_file_parse (const char *filename,
         &(ipmi_sensors_data.non_abbreviated_units),
         0,
       },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-username",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_tool_option_username,
-        1,
-        0,
-        &ipmi_sensors_username_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-password",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_tool_option_password,
-        1,
-        0,
-        &ipmi_sensors_password_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-k_g",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_tool_option_k_g,
-        1,
-        0,
-        &ipmi_sensors_k_g_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-authentication-type",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_tool_option_authentication_type,
-        1,
-        0,
-        &ipmi_sensors_authentication_type_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-cipher-suite-id",
-        CONFFILE_OPTION_INT,
-        -1,
-        _config_file_tool_option_cipher_suite_id,
-        1,
-        0,
-        &ipmi_sensors_cipher_suite_id_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-privilege-level",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_tool_option_privilege_level,
-        1,
-        0,
-        &ipmi_sensors_privilege_level_count,
-        &common_cmd_args_config,
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-workaround-flags",
-        CONFFILE_OPTION_LIST_STRING,
-        -1,
-        _config_file_tool_option_workaround_flags,
-        1,
-        0,
-        &ipmi_sensors_workaround_flags_count,
-        &common_cmd_args_config,
-        0
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-quiet-readings",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.quiet_readings_count),
-        &(ipmi_sensors_data.quiet_readings),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-record-ids",
-        CONFFILE_OPTION_LIST_INT,
-        -1,
-        _config_file_ipmi_sensors_record_ids,
-        1,
-        0,
-        &(ipmi_sensors_data.record_ids_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-exclude-record-ids",
-        CONFFILE_OPTION_LIST_INT,
-        -1,
-        _config_file_ipmi_sensors_exclude_record_ids,
-        1,
-        0,
-        &(ipmi_sensors_data.exclude_record_ids_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      /* maintained for backwards compatability */
-      {
-        "ipmimonitoring-groups",
-        CONFFILE_OPTION_LIST_STRING,
-        -1,
-        _config_file_ipmi_sensors_sensor_types,
-        1,
-        0,
-        &(ipmi_sensors_data.sensor_types_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      /* maintained for backwards compatability */
-      {
-        "ipmimonitoring-exclude-groups",
-        CONFFILE_OPTION_LIST_STRING,
-        -1,
-        _config_file_ipmi_sensors_exclude_sensor_types,
-        1,
-        0,
-        &(ipmi_sensors_data.exclude_sensor_types_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-sensor-types",
-        CONFFILE_OPTION_LIST_STRING,
-        -1,
-        _config_file_ipmi_sensors_sensor_types,
-        1,
-        0,
-        &(ipmi_sensors_data.sensor_types_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-exclude-sensor-types",
-        CONFFILE_OPTION_LIST_STRING,
-        -1,
-        _config_file_ipmi_sensors_exclude_sensor_types,
-        1,
-        0,
-        &(ipmi_sensors_data.exclude_sensor_types_count),
-        &(ipmi_sensors_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-bridge-sensors",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.bridge_sensors_count),
-        &(ipmi_sensors_data.bridge_sensors),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-shared-sensors",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.shared_sensors_count),
-        &(ipmi_sensors_data.shared_sensors),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-interpret-oem-data",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.interpret_oem_data_count),
-        &(ipmi_sensors_data.interpret_oem_data),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-ignore-non-interpretable-sensors",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.ignore_not_available_sensors_count),
-        &(ipmi_sensors_data.ignore_not_available_sensors),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-verbose-count",
-        CONFFILE_OPTION_INT,
-        -1,
-        _config_file_unsigned_int,
-        1,
-        0,
-        &(ipmi_sensors_data.verbose_count_count),
-        &(ipmi_sensors_data.verbose_count),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-entity-sensor-names",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.entity_sensor_names_count),
-        &(ipmi_sensors_data.entity_sensor_names),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-no-sensor-type-output",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.no_sensor_type_output_count),
-        &(ipmi_sensors_data.no_sensor_type_output),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-comma-separated-output",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.comma_separated_output_count),
-        &(ipmi_sensors_data.comma_separated_output),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-no-header-output",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.no_header_output_count),
-        &(ipmi_sensors_data.no_header_output),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-non-abbreviated-units",
-        CONFFILE_OPTION_BOOL,
-        -1,
-        _config_file_bool,
-        1,
-        0,
-        &(ipmi_sensors_data.non_abbreviated_units_count),
-        &(ipmi_sensors_data.non_abbreviated_units),
-        0,
-      },
-      /* backwards compatability to ipmimonitoring */
-      {
-        "ipmimonitoring-sensor-config-file",
-        CONFFILE_OPTION_STRING,
-        -1,
-        _config_file_string,
-        1,
-        0,
-        &(ipmi_sensors_data.sensor_state_config_file_count),
-        &(ipmi_sensors_data.sensor_state_config_file),
-        0
-      },
     };
 
   /*
